crates/oxc_linter/src/snapshots/no_confusing_set_timeout.snap
---
source: crates/oxc_linter/src/tester.rs
snapshot_kind: text
---
  ⚠ eslint-plugin-jest(no-confusing-set-timeout): `jest.setTimeout` should be placed before any other jest methods
    ╭─[no_confusing_set_timeout.tsx:10:17]
  9 │                 });
 10 │                 jest.setTimeout(800);
    ·                 ───────────────
 11 │             
    ╰────

  ⚠ eslint-plugin-jest(no-confusing-set-timeout): `jest.setTimeout` should be placed before any other jest methods
    ╭─[no_confusing_set_timeout.tsx:10:17]
  9 │                 });
 10 │                 jest.setTimeout(800);
    ·                 ───────────────
 11 │             
    ╰────

  ⚠ eslint-plugin-jest(no-confusing-set-timeout): Do not call `jest.setTimeout` multiple times
    ╭─[no_confusing_set_timeout.tsx:10:17]
  9 │                 });
 10 │                 jest.setTimeout(800);
    ·                 ───────────────
 11 │             
    ╰────
  help: Only the last call to `jest.setTimeout` will have an effect.

  ⚠ eslint-plugin-jest(no-confusing-set-timeout): `jest.setTimeout` should be placed before any other jest methods
    ╭─[no_confusing_set_timeout.tsx:10:17]
  9 │                 });
 10 │                 jest.setTimeout(800);
    ·                 ───────────────
 11 │             
    ╰────

  ⚠ eslint-plugin-jest(no-confusing-set-timeout): `jest.setTimeout` should be placed before any other jest methods
    ╭─[no_confusing_set_timeout.tsx:10:17]
  9 │                 });
 10 │                 jest.setTimeout(800);
    ·                 ───────────────
 11 │             
    ╰────

  ⚠ eslint-plugin-jest(no-confusing-set-timeout): `jest.setTimeout` should be placed before any other jest methods
   ╭─[no_confusing_set_timeout.tsx:3:21]
 2 │                 describe('A', () => {
 3 │                     jest.setTimeout(800);
   ·                     ───────────────
 4 │                     beforeEach(async () => { await new Promise(resolve => { setTimeout(resolve, 10000).unref(); });});
   ╰────

  ⚠ eslint-plugin-jest(no-confusing-set-timeout): `jest.setTimeout` should be call in `global` scope
   ╭─[no_confusing_set_timeout.tsx:3:21]
 2 │                 describe('A', () => {
 3 │                     jest.setTimeout(800);
   ·                     ───────────────
 4 │                     beforeEach(async () => { await new Promise(resolve => { setTimeout(resolve, 10000).unref(); });});
   ╰────

  ⚠ eslint-plugin-jest(no-confusing-set-timeout): `jest.setTimeout` should be placed before any other jest methods
   ╭─[no_confusing_set_timeout.tsx:5:25]
 4 │                         await new Promise((resolve) => {
 5 │                         jest.setTimeout(1000);
   ·                         ───────────────
 6 │                         setTimeout(resolve, 10000).unref();
   ╰────

  ⚠ eslint-plugin-jest(no-confusing-set-timeout): `jest.setTimeout` should be placed before any other jest methods
   ╭─[no_confusing_set_timeout.tsx:5:25]
 4 │                         await new Promise((resolve) => {
 5 │                         jest.setTimeout(1000);
   ·                         ───────────────
 6 │                         setTimeout(resolve, 10000).unref();
   ╰────

  ⚠ eslint-plugin-jest(no-confusing-set-timeout): `jest.setTimeout` should be call in `global` scope
   ╭─[no_confusing_set_timeout.tsx:5:25]
 4 │                         await new Promise((resolve) => {
 5 │                         jest.setTimeout(1000);
   ·                         ───────────────
 6 │                         setTimeout(resolve, 10000).unref();
   ╰────

  ⚠ eslint-plugin-jest(no-confusing-set-timeout): `jest.setTimeout` should be placed before any other jest methods
   ╭─[no_confusing_set_timeout.tsx:3:21]
 2 │                 test('test-suite', () => {
 3 │                     jest.setTimeout(1000);
   ·                     ───────────────
 4 │                 });
   ╰────

  ⚠ eslint-plugin-jest(no-confusing-set-timeout): `jest.setTimeout` should be call in `global` scope
   ╭─[no_confusing_set_timeout.tsx:3:21]
 2 │                 test('test-suite', () => {
 3 │                     jest.setTimeout(1000);
   ·                     ───────────────
 4 │                 });
   ╰────

  ⚠ eslint-plugin-jest(no-confusing-set-timeout): `jest.setTimeout` should be placed before any other jest methods
   ╭─[no_confusing_set_timeout.tsx:7:17]
 6 │                 });
 7 │                 jest.setTimeout(1000);
   ·                 ───────────────
 8 │             
   ╰────

  ⚠ eslint-plugin-jest(no-confusing-set-timeout): `jest.setTimeout` should be placed before any other jest methods
   ╭─[no_confusing_set_timeout.tsx:7:17]
 6 │                 });
 7 │                 jest.setTimeout(1000);
   ·                 ───────────────
 8 │             
   ╰────

  ⚠ eslint-plugin-jest(no-confusing-set-timeout): `jest.setTimeout` should be placed before any other jest methods
   ╭─[no_confusing_set_timeout.tsx:7:17]
 6 │                 });
 7 │                 jest.setTimeout(1000);
   ·                 ───────────────
 8 │             
   ╰────

  ⚠ eslint-plugin-jest(no-confusing-set-timeout): `jest.setTimeout` should be placed before any other jest methods
   ╭─[no_confusing_set_timeout.tsx:7:17]
 6 │                 });
 7 │                 jest.setTimeout(1000);
   ·                 ───────────────
 8 │             
   ╰────

  ⚠ eslint-plugin-jest(no-confusing-set-timeout): `jest.setTimeout` should be call in `global` scope
   ╭─[no_confusing_set_timeout.tsx:4:20]
 3 │                 {
 4 │                    jest.setTimeout(800);
   ·                    ───────────────
 5 │                 }
   ╰────

  ⚠ eslint-plugin-jest(no-confusing-set-timeout): Do not call `jest.setTimeout` multiple times
   ╭─[no_confusing_set_timeout.tsx:3:17]
 2 │                 jest.setTimeout(800);
 3 │                 jest.setTimeout(900);
   ·                 ───────────────
 4 │             
   ╰────
  help: Only the last call to `jest.setTimeout` will have an effect.

  ⚠ eslint-plugin-jest(no-confusing-set-timeout): `jest.setTimeout` should be call in `global` scope
   ╭─[no_confusing_set_timeout.tsx:4:21]
 3 │                 {
 4 │                     Jest.setTimeout(800);
   ·                     ───────────────
 5 │                 }
   ╰────

  ⚠ eslint-plugin-jest(no-confusing-set-timeout): `jest.setTimeout` should be placed before any other jest methods
   ╭─[no_confusing_set_timeout.tsx:3:17]
 2 │                 expect(1 + 2).toEqual(3);
 3 │                 jest.setTimeout(1000);
   ·                 ───────────────
 4 │             
   ╰────

  ⚠ eslint-plugin-jest(no-confusing-set-timeout): `jest.setTimeout` should be placed before any other jest methods
   ╭─[no_confusing_set_timeout.tsx:8:17]
 7 │                 });
 8 │                 Jest.setTimeout(800);
   ·                 ───────────────
 9 │                 setTimeout(800);
   ╰────

  ⚠ eslint-plugin-jest(no-confusing-set-timeout): `jest.setTimeout` should be placed before any other jest methods
   ╭─[no_confusing_set_timeout.tsx:8:17]
 7 │                 });
 8 │                 Jest.setTimeout(800);
   ·                 ───────────────
 9 │                 setTimeout(800);
   ╰────

  ⚠ eslint-plugin-jest(no-confusing-set-timeout): `jest.setTimeout` should be placed before any other jest methods
   ╭─[no_confusing_set_timeout.tsx:5:21]
 4 │                     });
 5 │                     jest.setTimeout(1000);
   ·                     ───────────────
 6 │                 
   ╰────

  ⚠ eslint-plugin-jest(no-confusing-set-timeout): `jest.setTimeout` should be placed before any other jest methods
   ╭─[no_confusing_set_timeout.tsx:5:21]
 4 │                     });
 5 │                     jest.setTimeout(1000);
   ·                     ───────────────
 6 │                 
   ╰────
