crates/oxc_linter/src/snapshots/no_console.snap
---
source: crates/oxc_linter/src/tester.rs
snapshot_kind: text
---
  ⚠ eslint(no-console): Unexpected console statement.
   ╭─[no_console.tsx:1:9]
 1 │ console.log()
   ·         ───
   ╰────

  ⚠ eslint(no-console): Unexpected console statement.
   ╭─[no_console.tsx:1:9]
 1 │ console.log(foo)
   ·         ───
   ╰────

  ⚠ eslint(no-console): Unexpected console statement.
   ╭─[no_console.tsx:1:9]
 1 │ console.error(foo)
   ·         ─────
   ╰────

  ⚠ eslint(no-console): Unexpected console statement.
   ╭─[no_console.tsx:1:9]
 1 │ console.info(foo)
   ·         ────
   ╰────

  ⚠ eslint(no-console): Unexpected console statement.
   ╭─[no_console.tsx:1:9]
 1 │ console.warn(foo)
   ·         ────
   ╰────

  ⚠ eslint(no-console): Unexpected console statement.
   ╭─[no_console.tsx:1:9]
 1 │ console.log(foo)
   ·         ───
   ╰────

  ⚠ eslint(no-console): Unexpected console statement.
   ╭─[no_console.tsx:1:9]
 1 │ console.error(foo)
   ·         ─────
   ╰────

  ⚠ eslint(no-console): Unexpected console statement.
   ╭─[no_console.tsx:1:9]
 1 │ console.info(foo)
   ·         ────
   ╰────

  ⚠ eslint(no-console): Unexpected console statement.
   ╭─[no_console.tsx:1:9]
 1 │ console.warn(foo)
   ·         ────
   ╰────

  ⚠ eslint(no-console): Unexpected console statement.
   ╭─[no_console.tsx:1:9]
 1 │ console.log(foo)
   ·         ───
   ╰────

  ⚠ eslint(no-console): Unexpected console statement.
   ╭─[no_console.tsx:1:9]
 1 │ console.error(foo)
   ·         ─────
   ╰────

  ⚠ eslint(no-console): Unexpected console statement.
   ╭─[no_console.tsx:1:9]
 1 │ console.info(foo)
   ·         ────
   ╰────

  ⚠ eslint(no-console): Unexpected console statement.
   ╭─[no_console.tsx:1:9]
 1 │ console.warn(foo)
   ·         ────
   ╰────
