crates/oxc_linter/src/snapshots/no_const_enum.snap
---
source: crates/oxc_linter/src/tester.rs
snapshot_kind: text
---
  ⚠ oxc(no-const-enum): Unexpected const enum
   ╭─[no_const_enum.tsx:1:1]
 1 │ const enum Color { Red, Green, Blue }
   · ─────
   ╰────
  help: Const enums are not supported by bundlers and are incompatible with the isolatedModules mode. Their use can lead to import nonexistent values (because const enums are erased).
