crates/oxc_linter/src/snapshots/no_constructor_return.snap
---
source: crates/oxc_linter/src/tester.rs
snapshot_kind: text
---
  ⚠ eslint(no-constructor-return): Unexpected return statement in constructor.
   ╭─[no_constructor_return.tsx:1:27]
 1 │ class C { constructor() { return '' } }
   ·                           ─────────
   ╰────

  ⚠ eslint(no-constructor-return): Unexpected return statement in constructor.
   ╭─[no_constructor_return.tsx:1:38]
 1 │ class C { constructor(a) { if (!a) { return '' } else { a() } } }
   ·                                      ─────────
   ╰────
