crates/oxc_linter/src/snapshots/no_debugger.snap
---
source: crates/oxc_linter/src/tester.rs
snapshot_kind: text
---
  ⚠ eslint(no-debugger): `debugger` statement is not allowed
   ╭─[no_debugger.tsx:1:10]
 1 │ if (foo) debugger
   ·          ────────
   ╰────
  help: Replace `debugger` with `{}`.
